# goku

./: .gitignore  Cargo.toml  Changes.md  README.md
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs  output.rs
cli/tests/: integration.rs
core/: Cargo.toml
core/src/: benchmark.rs  execution.rs  lib.rs  settings.rs
mcp/: Cargo.toml
mcp/src/: main.rs  mcp_goku.rs
scripts/: install.sh  install_mcp.sh
src/: benchmark.rs  execution.rs  main.rs  settings.rs
