[package]
name = "goku-bench"
version = "1.1.6"
edition = "2021"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
description = "Goku is an HTTP load testing application written in Rust "
repository = "https://github.com/jcaromiq/goku"
keywords = ["performance", "http", "benchmark", "load-testing", "performance-testing"]
license = "MIT"

[[bin]]
name = "goku"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
clap = { version = "4.5.18", features = ["derive"] }
hdrhistogram = "7.5.4"
colored = "2.1.0"
strum = { version = "0.26.3", features = ["derive"] }
anyhow = "1.0.89"
ctrlc = "3.4.5"
serde_yaml = "0.9.34"
serde = { version = "1.0.210", features = ["derive"] }
rustls = { version = "0.23.13", features = ["std", "logging", "std", "tls12"] }
rustls-pemfile = "2.1.3"
indicatif = "0.17.8"

[dev-dependencies]
pretty_assertions = "1.4.1"


[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'
