[package]
name = "goku-bench"
version = "3.0.0"
edition = "2021"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
description = "Goku is an HTTP load testing application written in Rust "
repository = "https://github.com/jcaromiq/goku"
keywords = ["performance", "http", "benchmark", "load-testing", "performance-testing"]
license = "MIT"

[[bin]]
name = "goku"
path = "src/main.rs"

[dependencies]
goku-core = { version = "3.0.0", path = "../core" }
tokio = { version = "1.48.0", features = ["full"] }
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
anyhow = "1.0.100"
ctrlc = "3.5.1"
indicatif = "0.18.3"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
httpmock = "0.7"
tempfile = "3.10"

