[package]
name = "goku-bench"
version = "3.0.0"
edition = "2021"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
description = "Goku is an HTTP load testing application written in Rust "
repository = "https://github.com/jcaromiq/goku"
keywords = ["performance", "http", "benchmark", "load-testing", "performance-testing"]
license = "MIT"

[[bin]]
name = "goku"
path = "src/main.rs"

[dependencies]
goku-core = { version = "3.0.0", path = "../core" }
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
anyhow = "1.0.102"
ctrlc = "3.5.2"
indicatif = "0.18.4"
serde_json = "1.0"
serde = { version = "1.0.228", features = ["derive"] }
mimalloc = { version = "0.1", default-features = false }

[dev-dependencies]
assert_cmd = "2.2"
predicates = "3.1"
httpmock = "0.8"
tempfile = "3.27"

