[package]
name = "goku-core"
version = "2.0.0"
edition = "2021"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
description = "Goku is an HTTP load testing application written in Rust "
repository = "https://github.com/jcaromiq/goku"
keywords = ["performance", "http", "benchmark", "load-testing", "performance-testing"]
license = "MIT"

[dependencies]
reqwest = { version = "0.12.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "stream",
] }
tokio = { version = "1.48.0", features = ["full"] }
hdrhistogram = "7.5.4"
strum = { version = "0.27.2", features = ["derive"] }
anyhow = "1.0.100"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]


[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'
