[package]
name = "goku-core"
version = "3.0.0"
edition = "2021"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
description = "Goku is an HTTP load testing application written in Rust "
repository = "https://github.com/jcaromiq/goku"
keywords = ["performance", "http", "benchmark", "load-testing", "performance-testing"]
license = "MIT"

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = [
    "rustls",
    "json",
    "stream",
    "http2",
] }
tokio = { version = "1.52.3", features = ["full"] }
hdrhistogram = "7.5.4"
strum = { version = "0.28.0", features = ["derive"] }
anyhow = "1.0.102"
serde_yaml = "0.9.34"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]

