[package]
name = "goku-mcp"
version = "2.0.0"
edition = "2021"
authors = ["Joaquin Caro <me@joaquin-caro.es>"]
description = "mcp for Goku"
repository = "https://github.com/jcaromiq/goku"
license = "MIT"

[[bin]]
name = "goku-mcp"
path = "src/main.rs"

[dependencies]
goku-core = { path = "../core" }
rmcp = { version = "0.9.1", features = ["transport-io", "server"] }
tokio = { version = "1.48.0", features = ["macros", "rt", "rt-multi-thread", "io-std", "signal"] }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
schemars = { version = "1.1.0"}



[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-unit = 1
panic = 'abort'
